crates/hir-ty/tests/snapshots/jls_members__interface_members_implicitly_public.snap
---
source: crates/hir-ty/tests/jls_members.rs
expression: out
---
FILE /src/com/example/pkg/Conn.java:
package com.example.pkg;

public interface Conn {
    Conn url(String u);
}

FILE /src/com/example/other/Impl.java:
package com.example.other;

import com.example.pkg.Conn;

public class Impl implements Conn {
    @Override
    public Conn url(String u) { return this; }
}
