crates/hir-ty/tests/snapshots/jls_members__nested_member_type_chain.snap
---
source: crates/hir-ty/tests/jls_members.rs
expression: out
---
SOURCE:

package com.example;

class A {
    class B {
        class C {}
    }

    B.C field;
}

RESOLVED:
field field: B.C
