crates/hir-ty/tests/snapshots/jls_members__primitive_widening_most_specific.snap
---
source: crates/hir-ty/tests/jls_members.rs
expression: out
---
append-string: <none> [args: java.lang.String]
valueof-int: <none> [args: int]
append-char: <none> [args: char]
