crates/hir-ty/tests/snapshots/jls_members__super_no_matching_constructor.snap
---
source: crates/hir-ty/tests/jls_members.rs
expression: out
---
FILE /src/com/example/Base.java:
package com.example;

class Base {
    Base(int tag) {}
}

FILE /src/com/example/Derived.java:
package com.example;

class Derived extends Base {
    Derived() {
        super();
    }
}

method Base(int): <init>
  locals: l0: int
  exprs: 
method Derived(): <init>
  locals: 
  exprs: e0: void
  diags: e0@4:8: wrong-argument-count: Constructor 'Base()' cannot be applied to given types
