crates/hir-ty/tests/snapshots/jls_members__try_catch_throwing_catch_da.snap
---
source: crates/hir-ty/tests/jls_members.rs
expression: out
---
FILE /src/com/example/Reader.java:
package com.example;

import java.io.IOException;

class Reader {
    String read() throws IOException { return "x"; }

    int len(java.io.Reader input) throws IOException {
        final String doc;
        try (java.io.Reader r = input) {
            doc = read();
        } catch (java.io.UncheckedIOException e) {
            throw e.getCause();
        }
        return doc.length();
    }
}

method read(): java.lang.String
  locals: 
  exprs: e0: java.lang.String
method len(java.io.Reader): int
  locals: l0: java.io.Reader | l1: java.lang.String | l2: java.io.UncheckedIOException | l3: java.io.Reader
  exprs: e1: java.lang.String | e2: java.lang.String | e3: java.lang.String | e4: java.io.UncheckedIOException | e5: <error> | e6: java.io.Reader | e7: java.lang.String | e8: int
  diags: e5@12:18: no-such-method: cannot find symbol
  symbol:   method getCause() | l3@9:13: cannot-resolve-type: cannot find symbol
  symbol:   class java.io.Reader | l2@11:17: cannot-resolve-type: cannot find symbol
  symbol:   class java.io.UncheckedIOException
