crates/hir-ty/tests/snapshots/jls_members__unknown_enum_constant.snap
---
source: crates/hir-ty/tests/jls_members.rs
expression: out
---
FILE /src/com/example/Syntax.java:
package com.example;

public enum Syntax {
    xml, html;
}

FILE /src/com/example/Use.java:
package com.example;

class Use {
    boolean isJson(com.example.Syntax syntax) {
        return syntax == Syntax.json;
    }

    com.example.Syntax ok(com.example.Syntax syntax) {
        return Syntax.xml;
    }
}

method isJson(com.example.Syntax): boolean
  locals: l0: com.example.Syntax
  exprs: e0: com.example.Syntax | e2: <error> | e3: boolean
  diags: e2@4:32: no-such-field: Cannot resolve symbol 'json'
method ok(com.example.Syntax): com.example.Syntax
  locals: l1: com.example.Syntax
  exprs: e5: com.example.Syntax
